--- a/.final_builds/jobs/luks/index.yml
+++ b/.final_builds/jobs/luks/index.yml
@@ -4,4 +4,8 @@ builds:
     version: d7e14df679e967b47e20fe24097e0cca75640c61
     sha1: fe9429cc1c9cd457cb5757812fc7c8fbf6c087f5
     blobstore_id: 5ac82d2c-d945-4734-8315-a6a88a65cf2f
+  c2d8b3e6e59d66bbd0de906b813e45045dc4368b:
+    version: c2d8b3e6e59d66bbd0de906b813e45045dc4368b
+    sha1: 85001bb6d363e2af5f36b1e9a6dc68ef84d0e445
+    blobstore_id: 73cdf089-353e-4242-9228-1b8a56d85a37
 format-version: '2'
